--- a/uwsgi.ini
+++ b/uwsgi.ini
@@ -3,7 +3,7 @@
 uid = ubuntu
 gid = ubuntu
 chdir = /home/ubuntu/jottingdown
-module = jottingdown.wsgi:application
+module = collective.wsgi:application
 strict = true
 enable-threads = true
 master = true
